Align center, fix bugs.

--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -1,15 +1,12 @@
 * {
   font-family: verdana;
-}
-
-background {
   background-color: black;
+  text-align: center;
 }
 
 h1 {
   color: white;
   font-size: 50px;
-  text-align: center;
 }
 
 h2 {
@@ -26,4 +23,9 @@ p {
 .download {
   font-size: 16px;
   color: aquamarine;
+}
+
+#copyright {
+  text-align: right;
+  color: gray;
 }
